css: avoid scrollbar to create a scrollbar

--- a/_sass/klise/_base.scss
+++ b/_sass/klise/_base.scss
@@ -9,7 +9,7 @@
 
 .notransition {
   -webkit-transition: none;
-  -moz-transition: none; 
+  -moz-transition: none;
   -ms-transition: none;
   -o-transition: none;
   transition: none;
@@ -54,6 +54,7 @@ body {
   font-feature-settings: "kern" 1;
   font-kerning: normal;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 // Set `margin-bottom` to maintain vertical rhythm
